# sheetbench-runner

./: .gitignore  Makefile  README.md  config.example.toml  pyproject.toml
sheetbench_runner/: cli.py  config.py  dataset.py  entities.py  evaluator.py  infuser.py  infuser_base.py  new_infuser.py  new_prompt.py  prompt.py  run_directory.py  runner.py
src/sheetbench_runner/: __init__.py  cli.py  config.py  dataset.py  entities.py  infuser.py  prompt.py  runner.py
tests/: __init__.py  conftest.py  test_dataset.py  test_evaluator.py  test_infuser.py  test_prompt.py  test_run_directory.py
