[project]
name = "sheetbench-runner"
version = "0.1.0"
description = "Parallel inference runner for SpreadsheetBench with inline evaluation"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "openpyxl>=3.1",
    "tqdm>=4.66",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-openpyxl>=3.1",
]

[project.scripts]
sheetbench-runner = "sheetbench_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheetbench_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
