[project]
name = "sheetbench-runner"
version = "0.1.0"
description = "Parallel inference runner for SpreadsheetBench with inline evaluation"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
    "types-openpyxl>=3.1",
]

[project.scripts]
sheetbench-runner = "sheetbench_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
